--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,5 @@ jobs:
       - name: Compile
         run: MIX_ENV=test mix compile --warnings-as-errors
 
-      - name: Check formatting
-        run: mix format --check-formatted
-
-      - name: Run tests
-        run: mix test
+      - name: Run checks
+        run: mix demo.run_ci_checks
