Simplify running prod version locally

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ demo-*.tar
 npm-debug.log
 /assets/node_modules/
 
+# config script for default prod configuration in local mode
+/priv/local_prod_config.exs
