--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ demo-*.tar
 
 # Ignore assets that are produced by build tools.
 /priv/static/assets/
+/priv/static/favicon-*.ico
+/priv/static/robots-*.txt
+/priv/static/robots-*.txt.gz
+/priv/static/robots.txt.gz
 
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
